<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Q &amp; A of the Day</string>
<string name="target">Your Device Target:</string>
<string name="stop_service">Stop Push Service</string>
<string name="start_service">Start Push service</string>
<string name="about">Brothers Anderson</string>
<string name="register">Register</string>
<string name="first_name">First name</string>
<string name="last_name">Last name</string>
<string name="username">Username</string>
<string name="password">Password</string>
<string name="confirm_password">Confirm Password</string>
<string name="address">Address</string>
<string name="city">City</string>
<string name="state">State</string>
<string name="zip_code">Zip code</string>
<string name="email">Email</string>
<string name="submit">Submit</string>
<string name="ok">OK</string>
<string name="todays_question">Answer today\'s question</string>
<string name="register_new_topic">Register for a new topic</string>
<string name="view_stats">View personal stats</string>
<string name="edit_account">Edit account info</string>


<string name="past_questions">Answer past questions</string>
<string name="topic_label">Select the topics to which you wish to subscribe</string>
<string name="topic_selection_label">Select the topics for which you wish to receive a daily question:</string>


<string name="username_pref">Username: </string>
<string name="password_pref">Password: </string>
<string name="un_in_use">That username is already in use</string>
<string name="yes">YES</string>
<string name="no">NO</string>
<string name="is_registered_pref">isRegistered</string>
<string name="topics_pref">topics</string>
<string name="pref_file">QAotD</string>
<string name="no_topic_selected">You have not subscribed to any topics yet.</string>
<string name="cancel">Cancel</string>
<string name="unsubscribe">Uncheck to unsubscribe:</string>
<string name="already_subscribed_to_all">You are subscribed to all topics</string>

<string name="return_to_main">Return to Main Menu</string>
<string name="must_register_first">You must register before using this App.</string>
<string name="congratulations_result">Congratulations you were number </string>
<string name="to_answer_result"> to answer this question!</string>
<string name="correct_answer">Your answer was correct!</string>
<string name="incorrect_answer">Your answer was incorrect.</string>
<string name="correct_answers">people have answered correctly.</string>
<string name="done">Done</string>
<string name="correct_answers_submitted">Correct answers</string>
<string name="total_answers_submitted">Total answers submitted</string>
<string name="average_rank">Average Rank</string>
<string name="view_achievements">View achievements</string>
<string name="achievements">Achievements</string>
</resources>
