<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent" 
              android:layout_height="fill_parent"
              android:orientation="vertical" >
              
    <ScrollView
		android:id="@+id/scrollview"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
	>
		<RelativeLayout
			android:id="@+id/widget30"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
		>
		       
		    <EditText android:id="@+id/firstName"
					  android:layout_width="fill_parent"
		    		  android:layout_height="40px"
		    		  android:text="@string/first_name"
		    		  android:textColor="@color/label_color"
		    		  android:inputType="textPersonName"/>
		    <EditText android:id="@+id/lastName"
					  android:layout_width="fill_parent"
		    		  android:layout_height="40px"
		    		  android:layout_below="@id/firstName"
		    		  android:text="@string/last_name"
		    		  android:textColor="@color/label_color"
		    		  android:inputType="textPersonName"/>
		    <EditText android:id="@+id/username"
		              android:layout_width="fill_parent"
		              android:layout_height="40px"
		              android:layout_below="@id/lastName"
		              android:text="@string/username"
		              android:textColor="@color/label_color"
		              android:inputType="text"/>
		 <!--    <TextView android:id="@+id/passwordLabel"
		    		  android:layout_width="fill_parent"
		    		  android:layout_height="wrap_content"
		    		  android:text="@string/password"
		    		  android:textColor="@color/text_color"/>   -->
		    <EditText android:id="@+id/password"
					  android:layout_width="fill_parent"
		    		  android:layout_height="40px"
		    		  android:layout_below="@id/username"
		    		  android:textColor="@color/label_color"
		    		  android:inputType="textPassword"/>
		<!--     <TextView android:id="@+id/confirmPasswordLabel"
		    		  android:layout_width="fill_parent"
		    		  android:layout_height="wrap_content"
		    		  android:text="@string/confirm_password"
		    		  android:textColor="@color/text_color"/>  -->
		    <EditText android:id="@+id/passwordConfirm"
		              android:layout_width="fill_parent"
		              android:layout_height="40px"
		              android:layout_below="@id/password"
		              android:textColor="@color/label_color"
		              android:inputType="textPassword"/>
		    <EditText android:id="@+id/address"
		              android:layout_width="fill_parent"
		              android:layout_height="40px"
		              android:layout_below="@id/passwordConfirm"
		              android:text="@string/address"
		              android:textColor="@color/label_color" 
		              android:inputType="textNoSuggestions"/>
		    <EditText android:id="@+id/city"
		              android:layout_width="fill_parent"
		              android:layout_height="40px"
		              android:text="@string/city"
		              android:layout_below="@id/address"
		              android:textColor="@color/label_color"
		              android:inputType="textNoSuggestions"/>
		    <EditText android:id="@+id/state"
		              android:layout_width="fill_parent"
		              android:layout_height="40px"
		              android:layout_below="@id/city"
		              android:text="@string/state" 
		              android:textColor="@color/label_color"
		              android:inputType="textNoSuggestions"/>
		    <EditText android:id="@+id/zipCode"
		              android:layout_width="fill_parent"
		              android:layout_height="40px"
		              android:layout_below="@id/state"
		              android:text="@string/zip_code" 
		              android:textColor="@color/label_color"
		              android:inputType="number"/>
		    <EditText android:id="@+id/email"
		              android:layout_width="fill_parent"
		              android:layout_height="40px"
		              android:layout_below="@id/zipCode"
		              android:text="@string/email"
		              android:textColor="@color/label_color"
		              android:inputType="textEmailAddress"/>
		    <Button android:id="@+id/register_submit_button"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_weight=".5"
		            android:layout_below="@id/email"
		            android:text="@string/submit" />
		    <Button android:id="@+id/register_cancel_button"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_weight=".5"
		            android:layout_below="@id/email"
		            android:layout_toRightOf="@id/register_submit_button"
		            android:text="@string/cancel" />
		    <TextView android:id="@+id/error_label"
		    		  android:layout_width="fill_parent"
		    		  android:layout_height="wrap_content"
		    		  android:layout_below="@+id/register_submit_button"
		    		  android:text=""
		    		  android:textColor="@color/error_color"/>
    	</RelativeLayout>
    </ScrollView>
</LinearLayout>